--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Seva Setu – Real-Time Monitoring System" />
+    <meta property="og:description" content="Streamlining certificate issuance with real-time monitoring and dynamic resource allocation." />
+    <meta property="og:image" content="https://sevasetu.ecovix.online/path-to-your-thumbnail.png" />
+    <meta property="og:url" content="https://sevasetu.ecovix.online/" />
     <title>Seva Setu</title>
     <link rel="icon" type="image/png" href="/seva.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;500;600&display=swap" rel="stylesheet">
